[Backport #20633] Fix the condition for `atomic_signal_fence` (#11166)

[Bug #20633] Fix the condition for `atomic_signal_fence`

`AC_CHECK_DECLS` defines `HAVE_DECL_SYMBOL` to 1 if declared, 0
otherwise, not undefined.

Co-authored-by: kimuraw (Wataru Kimura) <kimuraw@i.nifty.jp>